@@ -11,9 +11,8 @@
  */
 package org.moqui.impl.service
 
-import javax.transaction.xa.XAResource
+import javax.transaction.Synchronization
 import javax.transaction.Transaction
-import javax.transaction.xa.Xid
 import javax.transaction.xa.XAException
 import javax.transaction.TransactionManager
 import javax.transaction.Status
@@ -47,18 +46,18 @@ class ServiceCallSpecialImpl extends ServiceCallImpl implements ServiceCallSpeci
 
     @Override
     void registerOnCommit() {
-        ServiceXaResource sxr = new ServiceXaResource(this, sfi.ecfi, true)
+        ServiceSynchronization sxr = new ServiceSynchronization(this, sfi.ecfi, true)
         sxr.enlist()
     }
 
     @Override
     void registerOnRollback() {
-        ServiceXaResource sxr = new ServiceXaResource(this, sfi.ecfi, false)
+        ServiceSynchronization sxr = new ServiceSynchronization(this, sfi.ecfi, false)
         sxr.enlist()
     }
 
-    static class ServiceXaResource extends Thread implements XAResource {
-        protected final static Logger logger = LoggerFactory.getLogger(ServiceXaResource.class)
+    static class ServiceSynchronization implements Synchronization {
+        protected final static Logger logger = LoggerFactory.getLogger(ServiceSynchronization.class)
 
         protected ExecutionContextFactoryImpl ecfi
         protected String serviceName
@@ -66,13 +65,8 @@ class ServiceCallSpecialImpl extends ServiceCallImpl implements ServiceCallSpeci
         protected boolean runOnCommit
 
         protected Transaction tx = null
-        protected Xid xid = null
-        protected Integer timeout = null
 
-        protected boolean active = false
-        protected boolean suspended = false
-
-        ServiceXaResource(ServiceCallSpecialImpl scsi, ExecutionContextFactoryImpl ecfi, boolean runOnCommit) {
+        ServiceSynchronization(ServiceCallSpecialImpl scsi, ExecutionContextFactoryImpl ecfi, boolean runOnCommit) {
             this.ecfi = ecfi
             this.serviceName = scsi.serviceName
             this.parameters = new HashMap(scsi.parameters)
@@ -87,8 +81,27 @@ class ServiceCallSpecialImpl extends ServiceCallImpl implements ServiceCallSpeci
             if (tx == null) throw new XAException(XAException.XAER_NOTA)
 
             this.tx = tx
-            tx.enlistResource(this)
+            tx.registerSynchronization(this)
         }
+
+        @Override
+        void beforeCompletion() { }
+
+        @Override
+        void afterCompletion(int status) {
+            if (status == Status.STATUS_COMMITTED) {
+                if (runOnCommit) ecfi.serviceFacade.async().name(this.serviceName).parameters(this.parameters).call()
+            } else {
+                if (!runOnCommit) ecfi.serviceFacade.async().name(this.serviceName).parameters(this.parameters).call()
+            }
+        }
+
+        /* Old XAResource (and Thread) approach:
+
+        protected Xid xid = null
+        protected Integer timeout = null
+        protected boolean active = false
+        protected boolean suspended = false
 
         @Override
         void start(Xid xid, int flag) throws XAException {
@@ -106,7 +119,7 @@ class ServiceCallSpecialImpl extends ServiceCallImpl implements ServiceCallSpeci
             this.xid = xid
 
             // start a thread with this object to do something on timeout
-            this.setName("ServiceXaResourceThread")
+            this.setName("ServiceSynchronizationThread")
             this.setDaemon(true)
             this.start()
         }
@@ -183,7 +196,7 @@ class ServiceCallSpecialImpl extends ServiceCallImpl implements ServiceCallSpeci
                         String statusString = ecfi.transactionFacade.getStatusString()
                         logger.warn("Transaction timeout [${timeout}] status [${statusString}] xid [${this.xid}], service [${serviceName}] did NOT run")
 
-                        // TODO: what to do, if anything, when the we timeout and the service hasn't been run?
+                        // NOTE: what to do, if anything, when the we timeout and the service hasn't been run?
                     }
                 }
             } catch (InterruptedException e) {
@@ -192,5 +205,6 @@ class ServiceCallSpecialImpl extends ServiceCallImpl implements ServiceCallSpeci
                 logger.warn("Service Call Special Error", t)
             }
         }
+        */
     }
 }
